# duno

./: pyproject.toml
fast_zero/: app.py
migrations/versions/: f04a2af5295e_create_users_table.py
tests/: conftest.py  test_app.py
